settle down on configuration for the sdk

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Webpack sdk</title>
     <link rel="shortcut icon" href="#" />
 
-    <script type="module" src="./dist/main.js"></script>
+    <script type="module" src="./dist/sdk.js"></script>
   </head>
   <body>
 
